--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta property="og:title" content="TX-6 Remote">
     <meta property="og:description" content="Control TX-6 with Bluetooth or USB">
     <meta property="og:image" content="https://tx6.psimyn.com/tx6-og-1200.jpg">
-    <meta name="theme-color" content="#e2e2e4">
+    <meta name="theme-color" content="#e2e2e4" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#1a1a1a" media="(prefers-color-scheme: dark)">
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" type="image/png" href="/icon-192.png">
     <script type="module" src="/src/main.js"></script>
