--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script type="module" src="/src/main.js"></script>
 </head>
 
-<body x-data="tx6Controller()" x-init="init()">
+<body x-data="tx6Controller()" x-init="init()" x-cloak>
     <!-- Top Bar -->
     <div class="top-bar">
         <div class="top-bar-header">
