--- a/index.html
+++ b/index.html
@@ -150,6 +150,11 @@
                 <div class="knob-indicator indicator-small"
                     :style="`background: var(--accent-color-blue); transform: translateX(-50%) rotate(${midiToAngle(knobData.value)}deg)`">
                 </div>
+                <template x-if="getGhostKnobValue('eq') !== null">
+                    <div class="knob-ghost-indicator"
+                        :style="`transform: translateX(-50%) rotate(${midiToAngle(getGhostKnobValue('eq'))}deg)`">
+                    </div>
+                </template>
             </div>
             <div class="value-display">
                 <select x-model.number="currentEqMode" @change="selectEqMode($event.target.value)" class="mode-select">
@@ -167,6 +172,11 @@
                 <div class="knob-indicator indicator-small"
                     :style="`background: var(--accent-color-orange); transform: translateX(-50%) rotate(${midiToAngle(knobData.value)}deg)`">
                 </div>
+                <template x-if="getGhostKnobValue('fx1') !== null">
+                    <div class="knob-ghost-indicator"
+                        :style="`transform: translateX(-50%) rotate(${midiToAngle(getGhostKnobValue('fx1'))}deg)`">
+                    </div>
+                </template>
             </div>
             <div class="value-display">
                 <select x-model.number="currentFxMode" @change="selectFxMode($event.target.value)" class="mode-select">
@@ -236,8 +246,12 @@
                                     x-text="Math.floor((trackValues[`${currentTrack}-${currentFxMode}`] || 0) * 100 / 127)"></span>
                             </div>
                         </div>
-                        <button @click="toggleFx(fx.currentChannel === 7 ? 1 : 2)" class="fx-button"
-                            :class="{ active: fx[`fx${fx.currentChannel === 7 ? 1 : 2}Active`], orange: fx.currentChannel === 8 }">
+                        <button @click="toggleFx(fx.currentChannel === 7 ? 1 : 2)" class="fx-button" :class="{ 
+                                active: fx[`fx${fx.currentChannel === 7 ? 1 : 2}Active`], 
+                                orange: fx.currentChannel === 8,
+                                ghost: getGhostFxActive(fx.currentChannel) !== null
+                            }"
+                            :style="getGhostFxActive(fx.currentChannel) !== null ? `--ghost-intensity: ${getGhostFxActive(fx.currentChannel)}` : ''">
                             <span class="fx-button-inner" x-text="`FX${fx.currentChannel === 7 ? 'I' : 'II'}`"></span>
                         </button>
                     </div>
@@ -256,6 +270,11 @@
                                 <div class="knob-indicator indicator-small"
                                     :style="`transform: translateX(-50%) rotate(${midiToAngle(knobData.value)}deg)`">
                                 </div>
+                                <template x-if="getGhostKnobValue('fxReturn') !== null">
+                                    <div class="knob-ghost-indicator"
+                                        :style="`transform: translateX(-50%) rotate(${midiToAngle(getGhostKnobValue('fxReturn'))}deg)`">
+                                    </div>
+                                </template>
                             </div>
                             <div class="value-display">
                                 <span class="knob-value" x-text="getKnobDisplayValue('fxReturn')"></span>
@@ -288,6 +307,11 @@
                                 <div class="knob-indicator indicator-small"
                                     :style="`transform: translateX(-50%) rotate(${midiToAngle(knobData.value)}deg)`">
                                 </div>
+                                <template x-if="getGhostKnobValue('fxParam1') !== null">
+                                    <div class="knob-ghost-indicator"
+                                        :style="`transform: translateX(-50%) rotate(${midiToAngle(getGhostKnobValue('fxParam1'))}deg)`">
+                                    </div>
+                                </template>
                             </div>
                             <div class="value-display">
                                 <span class="knob-value" x-text="getKnobDisplayValue('fxParam1')"></span>
@@ -298,9 +322,10 @@
                     <template x-if="isFxParamList('param1')">
                         <div class="fx-param-grid" :style="getGridStyle(getFxParamOptions('param1').length)">
                             <template x-for="(label, index) in getFxParamOptions('param1')" :key="index">
-                                <button class="fx-param-button"
-                                    :class="{ active: isFxParamValueActive('param1', index, getFxParamOptions('param1').length) }"
-                                    @click="setFxParamValue('param1', index, getFxParamOptions('param1').length)"
+                                <button class="fx-param-button" :class="{ 
+                                        active: isFxParamValueActive('param1', index, getFxParamOptions('param1').length),
+                                        ghost: isFxParamGhostActive('param1', index, getFxParamOptions('param1').length)
+                                    }" @click="setFxParamValue('param1', index, getFxParamOptions('param1').length)"
                                     x-text="label">
                                 </button>
                             </template>
@@ -315,6 +340,11 @@
                         <div class="knob-indicator indicator-small"
                             :style="`transform: translateX(-50%) rotate(${midiToAngle(knobData.value)}deg)`">
                         </div>
+                        <template x-if="getGhostKnobValue('fxParam2') !== null">
+                            <div class="knob-ghost-indicator"
+                                :style="`transform: translateX(-50%) rotate(${midiToAngle(getGhostKnobValue('fxParam2'))}deg)`">
+                            </div>
+                        </template>
                     </div>
                     <div class="value-display">
                         <span class="knob-value" x-text="getKnobDisplayValue('fxParam2')"></span>
@@ -531,6 +561,11 @@
                                 <div class="knob-indicator indicator-small"
                                     :style="`transform: translateX(-50%) rotate(${midiToAngle(knobData.value)}deg)`">
                                 </div>
+                                <template x-if="getGhostKnobValue('synthDet') !== null">
+                                    <div class="knob-ghost-indicator"
+                                        :style="`transform: translateX(-50%) rotate(${midiToAngle(getGhostKnobValue('synthDet'))}deg)`">
+                                    </div>
+                                </template>
                             </div>
                             <div class="value-display">
                                 <span class="knob-value" x-text="synthDetDisplayValue"></span>
@@ -544,6 +579,11 @@
                                 <div class="knob-indicator indicator-small"
                                     :style="`transform: translateX(-50%) rotate(${midiToAngle(knobData.value)}deg)`">
                                 </div>
+                                <template x-if="getGhostKnobValue('synthLen') !== null">
+                                    <div class="knob-ghost-indicator"
+                                        :style="`transform: translateX(-50%) rotate(${midiToAngle(getGhostKnobValue('synthLen'))}deg)`">
+                                    </div>
+                                </template>
                             </div>
                             <div class="value-display">
                                 <span class="knob-value" x-text="Math.floor(synthSettings.len * 100 / 127)"></span>
