--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="title-dropdown" x-show="showTitleMenu" @click.away="showTitleMenu = false" x-transition>
                     <a class="dropdown-item" href="/"
                         @click.prevent="currentView = 'main'; showTitleMenu = false">TX6</a>
-                    <a class="dropdown-item" href="https://op1.psimyn.com" target="_blank"
+                    <a class="dropdown-item" href="https://op1.psimyn.com"
                         @click="showTitleMenu = false">OP1</a>
                 </div>
             </div>
